--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: Poppins, Harmond Display, Verdana;
+    font-family: Poppins, "Harmond Display", Verdana;
     box-sizing: border-box;
 }
 
@@ -113,3 +113,4 @@ body {
 .footer a:hover {
     color: #66e0ff;
 }
+
